# patina-mct

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  cliff.toml
.cargo/: audit.toml
.claude/: .patina-managed.toml
.claude/commands/: session-end.md  session-new.md  session-note.md  session-update.md  spec.md
.claude/skills/epistemic-beliefs/: SKILL.md
.claude/skills/epistemic-beliefs/references/: belief-example.md  verification-schema.md
.githooks/: pre-commit
.github/workflows/: ci.yml
.opencode/commands/: epistemic-beliefs.md  session-end.md  session-new.md  session-note.md  session-update.md  spec.md
.patina/: config.toml  oxidize.yaml  uid  versions.json
.pi/: .patina-managed.toml
.pi/commands/: session-end.md  session-note.md
.pi/prompts/: epistemic-beliefs.md  session-end.md  session-new.md  session-note.md  session-update.md  spec.md
crates/mct-daemon/: Cargo.toml
crates/mct-daemon/examples/: release-digests.rs  verify-release.rs
crates/mct-daemon/src/: acquisition.rs  authority_test_fixture.rs  blob_store.rs  children.rs  composition.rs  config.rs  control.rs  cycle.rs  fake.rs  federation.rs  inspector.rs  lib.rs  lifecycle.rs  main.rs  metrics.rs  process.rs  registry.rs  release.rs  state.rs  status.rs  supervisor.rs  toy.rs  wasm.rs  wit_values.rs
crates/mct-daemon/src/daemon/: cli_admin.rs  cli_artifacts.rs  cli_runtime.rs  control.rs  ingress.rs  resident.rs  supervisor_lifecycle.rs  triggers.rs  upgrade.rs  watch.rs
crates/mct-daemon/src/daemon/resident/: candidates.rs  decision.rs  execution.rs  forwarding.rs  idempotency.rs  local_ingress.rs  mod.rs  observation.rs  payload.rs  pipeline.rs  publication.rs  serving.rs  trigger_scheduler.rs
crates/mct-daemon/tests/: release_archive.rs  wasm_limits.rs
crates/mct-daemon/tests/fixtures/folder-watch-actor-0.1.0/: MCT-REBUILD.patch  PROVENANCE.md  child.toml  folder-watch-actor.wasm
crates/mct-daemon/tests/fixtures/slate-manager-0.2.0/: PROVENANCE.md  slate-manager.toml  slate-manager.wasm
crates/mct-daemon/tests/fixtures/watch-null-sink-0.1.0/: PROVENANCE.md  child.toml  watch-null-sink.wasm
crates/mct-iroh/: Cargo.toml
crates/mct-iroh/src/: endpoint.rs  identity.rs  lib.rs  observation.rs  serve.rs  test_support.rs
crates/mct-iroh/src/serve/: internal.rs
crates/mct-kernel/: Cargo.toml
crates/mct-kernel/src/: artifact.rs  call.rs  child.rs  error.rs  id.rs  lib.rs  observation.rs  peer.rs  route.rs  toy.rs  trigger.rs  watch.rs
crates/mct-kernel/src/call/: internal.rs  mod.rs
crates/mct-kernel/src/peer/: internal.rs  mod.rs
crates/mct-observation/: Cargo.toml
crates/mct-observation/src/: lib.rs
docs/: allium-training.md
layer/: events.jsonl
layer/allium/: mct-patina-migration.allium  mct-peer-ontology.allium  mct-product-map.allium
layer/core/: adapter-pattern.md  dependable-rust.md  mct-build-boundaries.md  migration-vocabulary.md  oxidized-knowledge.md  safety-boundaries.md  session-capture.md  spec-driven-design.md  unix-philosophy.md  what-is-mct.md
layer/sessions/: 20260528-093026-180552000.md  20260528-133024-init.md  20260529-070316-510393000.md  20260601-075107-316353000.md  20260607-073859-040228000.md  20260608-164158-253282000.md  20260609-184833-476914000.md  20260628-061623-325366000.md  20260628-062914-739494000.md  20260701-183038-422943000.md  20260702-063036-085320000.md  20260702-073627-029329000.md  20260709-091408-460632000.md  20260712-112719-785420000.md  20260712-160953-319506000.md  20260714-065952-699326000.md  20260714-160744-657025000.md  20260716-124858-031057000.md  20260721-072059-435043000.md  20260721-092955-065681000.md  20260721-191819-362076000.md
layer/slate/: events.jsonl
layer/slate/work/mct-allium-foundation/: work.toml
layer/slate/work/mct-authoritative-slate-local/: work.toml
layer/slate/work/mct-build-roadmap/: mct-build-roadmap.md  work.toml
layer/slate/work/mct-call-envelope/: adapter-mapping.md  work.toml
layer/slate/work/mct-child-package-install/: work.toml
layer/slate/work/mct-child-registry-lifecycle/: work.toml
layer/slate/work/mct-cli-config-packaging/: work.toml
layer/slate/work/mct-daemon-control-plane/: work.toml
layer/slate/work/mct-inspector-observability/: work.toml
layer/slate/work/mct-interface-launcher-control/: work.toml
layer/slate/work/mct-iroh-substrate/: work.toml
layer/slate/work/mct-jvm-bridge/: work.toml
layer/slate/work/mct-kernel-crate/: work.toml
layer/slate/work/mct-long-running-daemon-entrypoint/: work.toml
layer/slate/work/mct-node-identity-security/: work.toml
layer/slate/work/mct-observation-log/: work.toml
layer/slate/work/mct-pando-manifest/: work.toml
layer/slate/work/mct-process-harness/: work.toml
layer/slate/work/mct-release-hardening/: work.toml
layer/slate/work/mct-secrets-authority/: work.toml
layer/slate/work/mct-slate-wit-runtime-cli/: work.toml
layer/slate/work/mct-slice-call-envelope-adapter-mapping-doc/: work.toml
layer/slate/work/mct-slice-call-envelope-json-edge-roundtrip/: work.toml
layer/slate/work/mct-slice-control-plane-http-uds/: work.toml
layer/surface/: iroh-substrate-evidence.md  mct-p0-authority-ledger-hardening-cto-report.html  mct-p0-authority-ledger-hardening-onboarding-report.html  mct-p0-authority-ledger-hardening-report.html  mct-p0-docs-reality-review-report.html  mct-p0-refactor-improvement-plan-report.html  mct-storage-schema-inventory.md  mct-vs-patina-mother-deep-dive-report.html  patina-mct.org
scripts/: build-watch-fixtures.sh  check-comparative-vocabulary.sh  check-release-notes.sh  check-release-tooling.sh  check-release-version.sh  ci-tier0.sh  extract-release-notes.py  generate-release-sbom.sh  install-allium-ci.sh  normalize-release-sbom.py  package-release.py  release-baselines.py  release-baselines.sh  release-local.sh  release-smoke-proof.py  release-target.sh  render-release-baselines.py  test-release-platform.sh  test-release-sbom.sh  verify-release-artifact.sh
scripts/release/targets/: aarch64-apple-darwin.sh  linux-unsupported.sh
(+100 files in other folders)
