[package]
name = "mct-daemon"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mct-iroh = { path = "../mct-iroh" }

[dev-dependencies]
anyhow.workspace = true
mct-kernel = { path = "../mct-kernel" }
mct-observation = { path = "../mct-observation" }
tempfile.workspace = true
