[package]
name = "mct-daemon"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
mct-iroh = { path = "../mct-iroh" }
mct-kernel = { path = "../mct-kernel" }
mct-observation = { path = "../mct-observation" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
wasmtime.workspace = true

[dev-dependencies]
mct-observation = { path = "../mct-observation" }
tempfile.workspace = true
wat.workspace = true
