[package]
name = "mct-iroh"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mct-kernel = { path = "../mct-kernel" }
anyhow.workspace = true
iroh = "1.0.0-rc.1"
tokio.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
