[package]
name = "mct-iroh"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mct-kernel = { path = "../mct-kernel" }
iroh = "1.0.0-rc.1"
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
