[package]
name = "mct-iroh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mct-kernel = { path = "../mct-kernel" }
base64.workspace = true
blake3.workspace = true
iroh = "1.0.0-rc.1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
anyhow.workspace = true
tempfile.workspace = true
